[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virtools"
version = "0.1.0"
description = "Python tools for calibration and correction of DAWN VIR VIS and IR data"
authors = [
  { name="K.A.Rousan", email="rousan@niser.ac.in" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pvl",
  "pywt",
  "scikit-image"
]

[project.urls]
Homepage = "https://github.com/aburousan/virtools"
Documentation = "https://github.com/your-username/virtools/wiki"

